--- a/fabrics/public/index.html
+++ b/fabrics/public/index.html
@@ -40,7 +40,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-</html> -->
+</html>
 
 
 <!DOCTYPE html>
